--- a/readme
+++ b/readme
@@ -1,7 +1,8 @@
 Quickly and simply setting up git and npm from scratch, minimum viable solution
 apt install git
 apt install npm
-apt install python
+apt install python3
+ln /usr/bin/python3 /usr/bin/py
 wget <git-credential-manager tar gz uri>
 tar -xvf <path to tarball> -C /usr/local/bin
 git-credential-manager configure
@@ -13,18 +14,10 @@ cd to LSCOM/lscom
 npm install
 
 Blog post workflow instructions
-put a temp file in LSCOM/lscom/src/blog/
-python
-import update_sitemap
-update_sitemap("tempfile.txt")
-exit python
-mv tempfile.json to LSCOM/lscom/src/blog/ with intended name
-rm temp text file in blog folder
-update LSCOM/lscom/public/sitemap.xml with new name
-update LSCOM/lscom/src/blog/blogIndex.json
-update the default routes
-add the newest route
-update the previous route with the correct next link
+./newblog
+nano newblog.txt
+py -m update_sitemap
+
 
 Temp text file blog post format:
 SOFTitle
